modify flame_init and update solution of planar and axi after temperature bugfix

--- a/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
@@ -35,11 +35,7 @@ KIND_SCALAR_MODEL= FLAMELET
 DIFFUSIVITY_MODEL= FLAMELET
 VISCOSITY_MODEL= FLAMELET
 CONDUCTIVITY_MODEL= FLAMELET
-FLAME_OFFSET    = 0.0032 0.00 0.0
-FLAME_THICKNESS = 1.0e-3
-FLAME_BURNT_THICKNESS = 0.1
-% # pointing in the burnt direction
-FLAME_NORMAL = 1.0 0.1 0.0
+FLAME_INIT= (0.0032, 0.00, 0.00, 1.0, 0.1, 0.0, 1.0e-3, 0.1)
 % # progvar, enthalpy
 SPECIES_INIT = (0.0, -210000, 0.0, 0.0)
 CONV_NUM_METHOD_SPECIES= SCALAR_UPWIND
@@ -126,8 +122,8 @@ CONV_FIELD = RMS_PRESSURE
 MESH_FORMAT= CGNS
 MESH_FILENAME = mesh_structured.cgns
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution.dat
-RESTART_FILENAME= restart.dat
+SOLUTION_FILENAME= solution
+RESTART_FILENAME= restart
 %OUTPUT_FILES = (RESTART,PARAVIEW,PARAVIEW_MULTIBLOCK) 
 OUTPUT_FILES = (RESTART) 
 TABULAR_FORMAT = CSV
