--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
@@ -41,10 +41,7 @@ DIFFUSIVITY_MODEL= FLAMELET
 KIND_SCALAR_MODEL= FLAMELET
 VISCOSITY_MODEL= FLAMELET
 %
-FLAME_OFFSET= 0.0035 0 0
-FLAME_THICKNESS= 5.0e-4
-FLAME_BURNT_THICKNESS= 1
-FLAME_NORMAL= 3 2 0
+FLAME_INIT= (0.0035, 0, 0, 3.0, 2.0, 0.0, 5.0e-4, 1.0)
 %
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
