--- a/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd__fluid.cfg
+++ b/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd__fluid.cfg
@@ -52,13 +52,8 @@ INC_NONDIM= DIMENSIONAL
 % -------------------- FLUID MODEL --------------------------------------- %
 
 FLUID_MODEL= FLUID_FLAMELET
-
 FILENAME_LUT= fgm_ch4.drg
-
-FLAME_OFFSET= 0.004 0.0 0.0
-FLAME_NORMAL= 1.0 0.0 0.0
-FLAME_THICKNESS= 0.2e-3
-FLAME_BURNT_THICKNESS= 1
+FLAME_INIT= (0.004, 0.0, 0.0, 1.0, 0.0, 0.0, 0.2e-3, 1.0)
 
 % -------------------- SPECIES TRANSPORT ---------------------------------------%
 
@@ -99,36 +94,16 @@ CFL_ADAPT= NO
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 
-% Linear solver for implicit formulations (BCGSTAB, FGMRES)
 LINEAR_SOLVER= BCGSTAB
-
-% Preconditioner of the Krylov linear solver (JACOBI, LINELET, LU_SGS)
 LINEAR_SOLVER_PREC= ILU
-
-% Minimum error of the linear solver for implicit formulations
 LINEAR_SOLVER_ERROR= 1E-10
-
-% Max number of iterations of the linear solver for the implicit formulation
 LINEAR_SOLVER_ITER= 20
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
-%                              TURKEL_PREC, MSW)
 CONV_NUM_METHOD_FLOW= FDS
-
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
-%           Required for 2nd order upwind schemes (NO, YES)
 MUSCL_FLOW= NO
-
-% Slope limiter (VENKATAKRISHNAN, MINMOD)
 SLOPE_LIMITER_FLOW= NONE
-
-% Coefficient for the limiter (smooth regions)
 VENKAT_LIMITER_COEFF= 10.0
-
-% 2nd and 4th order artificial dissipation coefficients
 JST_SENSOR_COEFF= ( 0.5, 0.02 )
-
-% Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= EULER_IMPLICIT
