--- a/TestCases/flamelet/05_laminar_premixed_ch4_flame_cfd_axi/lam_prem_ch4_cfd_axi.cfg
+++ b/TestCases/flamelet/05_laminar_premixed_ch4_flame_cfd_axi/lam_prem_ch4_cfd_axi.cfg
@@ -38,11 +38,7 @@ KIND_SCALAR_MODEL= FLAMELET
 DIFFUSIVITY_MODEL= FLAMELET
 VISCOSITY_MODEL= FLAMELET
 CONDUCTIVITY_MODEL= FLAMELET
-FLAME_OFFSET= 0.0032 0.00 0.0
-FLAME_THICKNESS= 1.0e-3
-FLAME_BURNT_THICKNESS= 0.1
-% # pointing in the burnt direction
-FLAME_NORMAL= 1.0 0.1 0.0
+FLAME_INIT= (0.0032, 0.0, 0.0, 1, 0.1, 0, 1e-3, 0.1)
 % # progvar, enthalpy
 SPECIES_INIT= (0.0, -210000, 0.0, 0.0)
 CONV_NUM_METHOD_SPECIES= BOUNDED_SCALAR
@@ -62,12 +58,7 @@ LOOKUP_NAMES= (MolarWeightMix, Conductivity, Cp, HeatRelease, Diffusivity)
 USER_SCALAR_NAMES= (CO, NOx)
 USER_SOURCE_NAMES= ( \
     ProdRatePos_Y-CO,  ProdRateNegScaled_Y-CO  ,\
-    ProdRateTot_Y-NOx, NULL
-)
-%USER_SOURCE_NAMES= ( \
-%    ProdRatePos_Y-CO,  ProdRateNeg_Y-CO  ,\
-%    ProdRatePos_Y-NOx, ProdRateNeg_Y-NOx
-%)
+    ProdRateTot_Y-NOx, NULL )
 %
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
 %
@@ -132,10 +123,10 @@ CONV_FIELD= RMS_PRESSURE
 MESH_FORMAT= SU2
 MESH_FILENAME= mesh_axi.su2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution.dat
-RESTART_FILENAME= restart.dat
-OUTPUT_FILES= (RESTART,PARAVIEW,PARAVIEW_MULTIBLOCK) 
-%OUTPUT_FILES= (RESTART) 
+SOLUTION_FILENAME= solution
+RESTART_FILENAME= restart
+%OUTPUT_FILES= (RESTART,PARAVIEW,PARAVIEW_MULTIBLOCK) 
+OUTPUT_FILES= (RESTART) 
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 VOLUME_FILENAME= flow
