--- a/config_template.cfg
+++ b/config_template.cfg
@@ -777,18 +777,12 @@ FILENAME_LUT= fgm_ch4.drg
 % the flame is initialized using a plane, defined by a point and a normal. On one side, the solution is initialized
 % using 'burnt' conditions and on the other side 'unburnt' conditions. The normal points in the direction of the 'burnt'
 % condition.
-% point on the plane
-FLAME_OFFSET= 0.004 0.0 0.0
+% (x1,x2,x3) = point on the plane.
+% (x4,x5,x6) = normal of the plane.
+% (x7) = thickness of the reaction zone, this is the transition from unburnt to burnt conditions.
+% (x8) = Thickness of the 'burnt' zone, after this length, the conditions will be 'unburnt' again.
+FLAME_INIT= (0.004, 0.0, 0.0, 1.0, 0.0, 0.0, 0.2e-3, 1.0)
 %
-% normal of the plane
-FLAME_NORMAL= 1.0 0.0 0.0
-%
-% thickness of the reaction zone, this is the transition from unburnt to burnt conditions
-FLAME_THICKNESS= 0.2e-3
-%
-% Thickness of the 'burnt' zone, after this length, the conditions will be 'unburnt' again.
-FLAME_BURNT_THICKNESS= 1
-
 % --------------------- INVERSE DESIGN SIMULATION -----------------------------%
 %
 % Evaluate an inverse design problem using Cp (NO, YES)
