update flamelet cht case

--- a/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd_fluid.cfg
+++ b/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd_fluid.cfg
@@ -13,13 +13,13 @@ MARKER_PLOTTING= ( NONE )
 
 WRT_ZONE_HIST= YES
 
-SCREEN_OUTPUT= INNER_ITER LINSOL_ITER_SPECIES LINSOL_RESIDUAL LINSOL_ITER WALL_TIME RMS_PRESSURE
+SCREEN_OUTPUT= INNER_ITER WALL_TIME RMS_PRESSURE RMS_PROGRESS_VARIABLE
 
 HISTORY_OUTPUT= RMS_RES AERO_COEFF FLOW_COEFF FLOW_COEFF_SURF
 
 VOLUME_OUTPUT= SOLUTION PRIMITIVE SOURCE RESIDUAL LOOKUP
 
-OUTPUT_FILES= (RESTART)
+OUTPUT_FILES= (RESTART_ASCII)
 
 INNER_ITER= 1
 
