--- a/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd_master.cfg
+++ b/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd_master.cfg
@@ -29,6 +29,7 @@ MARKER_CHT_INTERFACE=  ( cht_interface_fluid, cht_interface_solid )
 
 CHT_COUPLING_METHOD= DIRECT_TEMPERATURE_ROBIN_HEATFLUX
 
+READ_BINARY_RESTART= NO
 RESTART_SOL= YES
 
 RESTART_FILENAME= restart
