ad and dot testcase

--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
@@ -128,7 +128,7 @@ OUTPUT_WRT_FREQ= 100
 GRAD_OBJFUNC_FILENAME= of_grad.csv
 %
 RESTART_SOL= YES
-READ_BINARY_RESTART= YES
+READ_BINARY_RESTART= NO
 RESTART_FILENAME= restart
 RESTART_ADJ_FILENAME= restart_adj
 SOLUTION_FILENAME= solution
