using the surface averages in a discrete adjoint case

--- a/TestCases/species_transport/venturi_primitive_3species/DAspecies3_primitiveVenturi.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/DAspecies3_primitiveVenturi.cfg
@@ -14,6 +14,11 @@
 SOLVER= INC_RANS
 KIND_TURB_MODEL= SST
 %
+CUSTOM_OUTPUTS= 'avg_species_0 : AreaAvg{SPECIES[0]}[outlet];\
+                 avg_species_1 : AreaAvg{SPECIES[1]}[outlet];\
+                 var_species : AreaAvg{pow(SPECIES[0] - avg_species_0, 2) +\
+                                       pow(SPECIES[1] - avg_species_1, 2)}[outlet]'
+CUSTOM_OBJFUNC= 'var_species'
 OBJECTIVE_FUNCTION= SURFACE_SPECIES_VARIANCE
 OBJECTIVE_WEIGHT= 1.0
 %
