Apply suggestions from code review

--- a/TestCases/species_transport/venturi_primitive_3species/DAspecies3_primitiveVenturi.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/DAspecies3_primitiveVenturi.cfg
@@ -19,7 +19,7 @@ CUSTOM_OUTPUTS= 'avg_species_0 : AreaAvg{SPECIES[0]}[outlet];\
                  var_species : AreaAvg{pow(SPECIES[0] - avg_species_0, 2) +\
                                        pow(SPECIES[1] - avg_species_1, 2)}[outlet]'
 CUSTOM_OBJFUNC= 'var_species'
-OBJECTIVE_FUNCTION= SURFACE_SPECIES_VARIANCE
+OBJECTIVE_FUNCTION= CUSTOM_OBJFUNC
 OBJECTIVE_WEIGHT= 1.0
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
