add tmodify cht ad and dot regression

--- a/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_master.cfg
+++ b/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_master.cfg
@@ -10,16 +10,13 @@
 
 SOLVER= MULTIPHYSICS
 
-CONFIG_LIST= ( lam_prem_ch4_cht_ad__fluid.cfg, lam_prem_ch4_cht_ad__solid.cfg )
-
+CONFIG_LIST= ( lam_prem_ch4_cht_ad_fluid.cfg, lam_prem_ch4_cht_ad_solid.cfg )
 
 %%%%%%%%%%%%%%%%%%
 %   Mesh stuff   %
 %%%%%%%%%%%%%%%%%%
 
-
 MESH_FILENAME= mesh_unstructured_cht.su2
-% MESH_OUT_FILENAME= mesh_def.su2
 
 MESH_FORMAT= SU2
 MULTIZONE_MESH= YES
@@ -29,7 +26,7 @@ SOLUTION_FILENAME= solution
 RESTART_SOL= YES
 RESTART_FILENAME= restart
 RESTART_ADJ_FILENAME= restart_adj
-SOLUTION_ADJ_FILENAME= restart_adj
+SOLUTION_ADJ_FILENAME= solution_adj
 
 % define the interface between the zones
 MARKER_ZONE_INTERFACE= ( cht_interface_fluid, cht_interface_solid )
