--- a/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_dot_master.cfg
+++ b/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_dot_master.cfg
@@ -23,6 +23,7 @@ MULTIZONE_MESH= YES
 
 % Restart flow input file
 SOLUTION_FILENAME= solution
+READ_BINARY_RESTART= NO
 RESTART_SOL= YES
 RESTART_FILENAME= restart
 RESTART_ADJ_FILENAME= restart_adj
