--- a/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_master.cfg
+++ b/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_master.cfg
@@ -12,11 +12,14 @@ SOLVER= MULTIPHYSICS
 
 CONFIG_LIST= ( lam_prem_ch4_cht_ad_fluid.cfg, lam_prem_ch4_cht_ad_solid.cfg )
 
+
 %%%%%%%%%%%%%%%%%%
 %   Mesh stuff   %
 %%%%%%%%%%%%%%%%%%
 
+
 MESH_FILENAME= mesh_unstructured_cht.su2
+% MESH_OUT_FILENAME= mesh_def.su2
 
 MESH_FORMAT= SU2
 MULTIZONE_MESH= YES
@@ -38,7 +41,7 @@ CHT_COUPLING_METHOD= DIRECT_TEMPERATURE_ROBIN_HEATFLUX
 TIME_DOMAIN= NO
 OUTER_ITER = 11
 
-OUTPUT_WRT_FREQ= 500
+OUTPUT_WRT_FREQ= 50
 SCREEN_WRT_FREQ_INNER= 1
 SCREEN_WRT_FREQ_OUTER= 1
 
