--- a/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_dot_master.cfg
+++ b/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_dot_master.cfg
@@ -12,11 +12,14 @@ SOLVER= MULTIPHYSICS
 
 CONFIG_LIST= ( lam_prem_ch4_cht_ad_fluid.cfg, lam_prem_ch4_cht_ad_solid.cfg )
 
+
 %%%%%%%%%%%%%%%%%%
 %   Mesh stuff   %
 %%%%%%%%%%%%%%%%%%
 
+
 MESH_FILENAME= mesh_unstructured_cht.su2
+% MESH_OUT_FILENAME= mesh_def.su2
 
 MESH_FORMAT= SU2
 MULTIZONE_MESH= YES
