--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1090,7 +1090,8 @@ KIND_INTERPOLATION= NEAREST_NEIGHBOR
 % Use conservative approach for interpolating between meshes
 CONSERVATIVE_INTERPOLATION= YES
 %
-%  Type of radial basis function to use for radial basis function interpolation
+% Type of radial basis function to use for radial basis function interpolation
+% (WENDLAND_C2, INV_MULTI_QUADRIC, GAUSSIAN, THIN_PLATE_SPLINE, MULTI_QUADRIC).
 KIND_RADIAL_BASIS_FUNCTION = WENDLAND_C2
 %
 % Radius for radial basis function.
