--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1146,7 +1146,7 @@ CATALYTIC_EFFICIENCY= 0.2
 % SST Model: (inlet_marker1, TurbIntensity1, RatioTurbLamViscosity1, inlet_marker2, TurbIntensity2, RatioTurbLamViscosity2, ...)
 MARKER_INLET_TURBULENT= (inlet1, 0.05, 15, inlet2, 0.02, ...)
 %
-% Custom boundary marker(s)
+% Custom boundary marker(s) (this has to be implemented by users in the code).
 MARKER_CUSTOM= ( NONE )
 %
 % Smoluchowski/Maxwell slip wall boundary marker(s)
