--- a/config_template.cfg
+++ b/config_template.cfg
@@ -2391,8 +2391,10 @@ DEFINITION_DV= ( 1, 1.0 | airfoil | 0, 0.05 ); ( 1, 1.0 | airfoil | 0, 0.10 ); (
 OPT_COMBINE_OBJECTIVE = NO
 %
 %
-% Number of iterations to average the objective
+% Number of iterations to average the objective function for unsteady adjoints,
+% 0 averages over all time iterations, "N" averages over the last N iterations.
 ITER_AVERAGE_OBJ= 0
+
 % --------------------- LIBROM PARAMETERS -----------------------%
 % LibROM can be found here: https://github.com/LLNL/libROM
 %
