Periodic BC: add dummy BCs.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -903,6 +903,11 @@ MARKER_SUPERSONIC_OUTLET= ( NONE )
 % rotation_angle_z-axis, translation_x, translation_y, translation_z, ... )
 MARKER_PERIODIC= ( NONE )
 %
+% Periodic BCs with dummy points (NO, YES)
+% Four layers in both side for MUSCL: the inner two layers send and the outer layers recieve;
+% if no MUSCL, only two layers are needed for one side but the original implementation is enough. 
+PERIODIC_DUMMY= NO
+%
 % Engine Inflow boundary type (FAN_FACE_MACH, FAN_FACE_PRESSURE, FAN_FACE_MDOT)
 ENGINE_INFLOW_TYPE= FAN_FACE_MACH
 %
