Remove Tecplot outputs

--- a/TestCases/gust/gust_with_mesh_deformation.cfg
+++ b/TestCases/gust/gust_with_mesh_deformation.cfg
@@ -178,5 +178,5 @@ TABULAR_FORMAT= CSV
 % Possible formats : (TECPLOT, TECPLOT_BINARY, SURFACE_TECPLOT,
 %  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW,
 %  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, SURFACE_CGNS, STL)
-OUTPUT_FILES= (TECPLOT, SURFACE_TECPLOT)
+OUTPUT_FILES= (NONE)
 
