switch to custom objectives

--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
@@ -20,8 +20,10 @@
 SOLVER= INC_NAVIER_STOKES
 KIND_TURB_MODEL= NONE
 %
-OBJECTIVE_FUNCTION= SURFACE_SCALAR_03
+OBJECTIVE_FUNCTION= CUSTOM_OBJFUNC
 OBJECTIVE_WEIGHT= 1.0
+CUSTOM_OBJFUNC= avg_NOx
+CUSTOM_OUTPUTS= 'avg_NOx : MassFlowAvg{SPECIES[3]}[outlet]'
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
@@ -82,7 +84,7 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 USER_SCALAR_NAMES= (Y-CO, Y-NOx_tot)
 
 USER_SOURCE_NAMES= ( \
-    ProdRatePos_Y-CO,  ProdRateNegScaled_Y-CO  ,\
+    ProdRatePos_Y-CO, ProdRateNegScaled_Y-CO ,\
     ProdRateTot_Y-NOx, zero)
 
 DIFFUSIVITY_CONSTANT= 0.00001
@@ -96,7 +98,7 @@ TIME_DISCRE_SPECIES= EULER_IMPLICIT
 SPECIES_INIT= (0, 0, 0, 0, 0, 0, 0)
 SPECIES_CLIPPING= NO
 LOOKUP_NAMES= (MolarWeightMix, Conductivity, HeatRelease, Diffusivity, \
-    ProdRatePos_Y-CO,  ProdRateNegScaled_Y-CO  ,\
+    ProdRatePos_Y-CO, ProdRateNegScaled_Y-CO ,\
     ProdRateTot_Y-NOx)
 
 %
@@ -113,7 +115,7 @@ MESH_FILENAME= mesh_unstructured_hx.su2
 SCREEN_OUTPUT= INNER_ITER WALL_TIME RMS_ADJ_PRESSURE RMS_ADJ_VELOCITY-X RMS_ADJ_VELOCITY-Y RMS_ADJ_SPECIES_0 RMS_ADJ_SPECIES_1 RMS_ADJ_SPECIES_2 RMS_ADJ_SPECIES_3
 SCREEN_WRT_FREQ_INNER= 1
 %
-HISTORY_OUTPUT= ITER RMS_RES LINSOL FLOW_COEFF_SURF FLAMELET_COEFF_SURF
+HISTORY_OUTPUT= ITER RMS_RES LINSOL FLOW_COEFF_SURF FLAMELET_COEFF_SURF CUSTOM COMBO
 CONV_FILENAME= history
 MARKER_ANALYZE= outlet
 MARKER_ANALYZE_AVERAGE= MASSFLUX
