--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_dot.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_dot.cfg
@@ -20,8 +20,11 @@
 SOLVER= INC_NAVIER_STOKES
 KIND_TURB_MODEL= NONE
 %
-OBJECTIVE_FUNCTION= SURFACE_SCALAR_03
+OBJECTIVE_FUNCTION= CUSTOM_OBJFUNC
 OBJECTIVE_WEIGHT= 1.0
+CUSTOM_OBJFUNC= avg_NOx
+CUSTOM_OUTPUTS= 'avg_NOx : MassFlowAvg{SPECIES[3]}[outlet]'
+
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
