change SPECIES_USE_STRONG_BC to MARKER_SPECIES_STRONG_BC

--- a/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_mixingmodel_heatcapacity_H2_ND.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_mixingmodel_heatcapacity_H2_ND.cfg
@@ -71,7 +71,7 @@ INLET_FILENAME= inlet_venturi.dat
 INC_INLET_TYPE=  VELOCITY_INLET VELOCITY_INLET
 MARKER_INLET= ( gas_inlet,       400, 5.0, 1.0,  0.0, 0.0,\
                 air_axial_inlet, 300, 5.0, 0.0, -1.0, 0.0 )
-SPECIES_USE_STRONG_BC= YES
+MARKER_SPECIES_STRONG_BC= (gas_inlet, air_axial_inlet, wall)
 MARKER_INLET_SPECIES= (gas_inlet, 1.0, \          
                        air_axial_inlet, 0.6)           
 %
