--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
@@ -53,7 +53,8 @@ MARKER_SYM= ( axis, symmetry_xm, symmetry_xp )
 INC_INLET_TYPE=  VELOCITY_INLET
 MARKER_INLET= (inlet, 300.0, 0.20,    1.0, 0.0, 0.0)
 MARKER_INLET_SPECIES= (inlet, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
-SPECIES_USE_STRONG_BC= YES
+MARKER_SPECIES_STRONG_BC= (inlet, wall_burner, wall_hx)
+
 %
 INC_OUTLET_TYPE= PRESSURE_OUTLET
 MARKER_OUTLET= ( outlet, 0.0 )
