--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_dot.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_dot.cfg
@@ -48,13 +48,13 @@ FLAME_INIT= (0.0035, 0, 0, 3, 2, 0, 5.0e-4, 1.0)
 %
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
-MARKER_ISOTHERMAL= ( wall_burner, 450,   wall_hx, 900 )
+MARKER_ISOTHERMAL= ( wall_burner, 450, wall_hx, 900 )
 MARKER_SYM= ( axis, symmetry_xm, symmetry_xp, outlet )
 %
 INC_INLET_TYPE=  VELOCITY_INLET
 MARKER_INLET= (inlet, 300.0, 0.20,    1.0, 0.0, 0.0)
 MARKER_INLET_SPECIES= (inlet, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
-SPECIES_USE_STRONG_BC= YES
+MARKER_SPECIES_STRONG_BC= (inlet, wall_burner, wall_hx)
 %
 % INC_OUTLET_TYPE= PRESSURE_OUTLET
 % MARKER_OUTLET= ( outlet, 0.0 )
