--- a/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_fluid.cfg
+++ b/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_fluid.cfg
@@ -40,7 +40,7 @@ MARKER_INLET_SPECIES= (inlet, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
 
 INC_OUTLET_TYPE= PRESSURE_OUTLET
 MARKER_OUTLET= (outlet, 0.0)
-SPECIES_USE_STRONG_BC= YES
+MARKER_SPECIES_STRONG_BC= (inlet, wall_burner)
 
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 
