--- a/TestCases/species_transport/passive_transport_validation/passive_transport.cfg
+++ b/TestCases/species_transport/passive_transport_validation/passive_transport.cfg
@@ -52,7 +52,7 @@ MARKER_SYM= ( top, bottom )
 INC_INLET_TYPE= VELOCITY_INLET, VELOCITY_INLET
 MARKER_INLET= ( gas_inlet, 300, 1, 1.0, 0.0, 0.0, air_inlet, 300, 1, 1.0, 0.0, 0.0 )
 %
-SPECIES_USE_STRONG_BC= YES
+MARKER_SPECIES_STRONG_BC= (gas_inlet, air_inlet)
 MARKER_INLET_SPECIES = (gas_inlet, 1.0, air_inlet, 0.0 )
 %
 INC_OUTLET_TYPE= PRESSURE_OUTLET
