--- a/config_template.cfg
+++ b/config_template.cfg
@@ -723,9 +723,6 @@ SCHMIDT_NUMBER_TURBULENT= 0.7
 % For N species, N-1 transport equations are solved, the last one Y_N is solved algebraically as 1-(sum of the species 1 to (N-1))
 MARKER_INLET_SPECIES= (inlet, 0.5, ..., inlet2, 0.6, ...)
 %
-% Use strong inlet and outlet BC in the species solver
-SPECIES_USE_STRONG_BC= NO
-%
 % Convective numerical method for species transport (SCALAR_UPWIND, BOUNDED_SCALAR)
 CONV_NUM_METHOD_SPECIES= SCALAR_UPWIND
 %
@@ -1019,6 +1016,9 @@ CATALYTIC_WALL= ( NONE )
 % SA Model: (inlet_marker1, NuFactor1, inlet_marker2, NuFactor2, ...)
 % SST Model: (inlet_marker1, TurbIntensity1, RatioTurbLamViscosity1, inlet_marker2, TurbIntensity2, RatioTurbLamViscosity2, ...)
 MARKER_INLET_TURBULENT= (inlet1, 0.05, 15, inlet2, 0.02, ...)
+%
+% list of markers species transport and flamelet model where strong boundary conditions should be used
+MARKER_SPECIES_STRONG_BC= (inlet, wall)
 
 % ------------------------ WALL ROUGHNESS DEFINITION --------------------------%
 % The equivalent sand grain roughness height (k_s) on each of the wall. This must be in m.
