update testcase strong bc

--- a/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd_fluid.cfg
+++ b/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd_fluid.cfg
@@ -38,7 +38,7 @@ MARKER_INLET_SPECIES= (inlet, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
 
 INC_OUTLET_TYPE= PRESSURE_OUTLET
 MARKER_OUTLET= (outlet, 0.0)
-MARKER_SPECIES_STRONG_BC= (inlet, wall_burner)
+MARKER_SPECIES_STRONG_BC= (inlet, outlet, wall_burner)
 
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 
