--- a/TestCases/flamelet/05_laminar_premixed_ch4_flame_cfd_axi/lam_prem_ch4_cfd_axi.cfg
+++ b/TestCases/flamelet/05_laminar_premixed_ch4_flame_cfd_axi/lam_prem_ch4_cfd_axi.cfg
@@ -53,7 +53,7 @@ SPECIES_CLIPPING_MAX= 1 2e6 1 1
 %
 MARKER_INLET_SPECIES= (inlet, 0, -193600.0, 0.0, 0.0)
 CFL_REDUCTION_SPECIES= 1.0
-MARKER_SPECIES_STRONG_BC= (inlet, wall)
+MARKER_SPECIES_STRONG_BC= (inlet, outlet, wall)
 LOOKUP_NAMES= (MolarWeightMix, Conductivity, Cp, HeatRelease, Diffusivity)
 USER_SCALAR_NAMES= (CO, NOx)
 USER_SOURCE_NAMES= ( \
