--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -128,7 +128,7 @@ jobs:
         uses: docker://ghcr.io/su2code/su2/test-su2:230225-2136
         with:
           # -t <Tutorials-branch> -c <Testcases-branch>
-          args: -b ${{github.ref}} -t develop -c feature_new_flamelet -s ${{matrix.testscript}}
+          args: -b ${{github.ref}} -t feature_new_flamelet -c feature_new_flamelet -s ${{matrix.testscript}}
       - name: Cleanup
         uses: docker://ghcr.io/su2code/su2/test-su2:230225-2136
         with:
