remove dead code

--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
@@ -116,7 +116,7 @@ MESH_FILENAME= mesh_unstructured_hx.su2
 SCREEN_OUTPUT= INNER_ITER WALL_TIME RMS_ADJ_PRESSURE RMS_ADJ_VELOCITY-X RMS_ADJ_VELOCITY-Y RMS_ADJ_SPECIES_0 RMS_ADJ_SPECIES_1 RMS_ADJ_SPECIES_2 RMS_ADJ_SPECIES_3
 SCREEN_WRT_FREQ_INNER= 1
 %
-HISTORY_OUTPUT= ITER RMS_RES LINSOL FLOW_COEFF_SURF FLAMELET_COEFF_SURF CUSTOM COMBO
+HISTORY_OUTPUT= ITER RMS_RES LINSOL FLOW_COEFF_SURF CUSTOM COMBO
 CONV_FILENAME= history
 MARKER_ANALYZE= outlet
 MARKER_ANALYZE_AVERAGE= MASSFLUX
