--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -6,6 +6,7 @@ su2_cfd_src = files(['definition_structure.cpp',
 su2_cfd_src += files(['fluid/CFluidModel.cpp',
                       'fluid/CIdealGas.cpp',
                       'fluid/CFluidScalar.cpp',
+                      'fluid/CFluidFlamelet.cpp',
                       'fluid/CPengRobinson.cpp',
                       'fluid/CVanDerWaalsGas.cpp',
                       'fluid/CCoolProp.cpp',
@@ -58,6 +59,7 @@ su2_cfd_src += files(['variables/CIncNSVariable.cpp',
                       'variables/CTurbVariable.cpp',
                       'variables/CScalarVariable.cpp',
                       'variables/CSpeciesVariable.cpp',
+                      'variables/CSpeciesFlameletVariable.cpp',
                       'variables/CAdjNSVariable.cpp',
                       'variables/CBaselineVariable.cpp',
                       'variables/CDiscAdjFEABoundVariable.cpp',
@@ -107,6 +109,7 @@ su2_cfd_src += files(['solvers/CSolverFactory.cpp',
                       'solvers/CSolver.cpp',
                       'solvers/CTemplateSolver.cpp',
                       'solvers/CSpeciesSolver.cpp',
+                      'solvers/CSpeciesFlameletSolver.cpp',
                       'solvers/CTransLMSolver.cpp',
                       'solvers/CTurbSolver.cpp',
                       'solvers/CTurbSASolver.cpp',
