--- a/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_mixingmodel_TURBULENT_MARKERS.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_mixingmodel_TURBULENT_MARKERS.cfg
@@ -64,7 +64,7 @@ INLET_FILENAME= inlet_venturi.dat
 INC_INLET_TYPE=  VELOCITY_INLET VELOCITY_INLET
 MARKER_INLET= ( gas_inlet,       300, 15.0, 1.0,  0.0, 0.0,\
                 air_axial_inlet, 300, 10.0, 0.0, -1.0, 0.0 )
-SPECIES_USE_STRONG_BC= YES
+MARKER_SPECIES_STRONG_BC= (gas-inlet, air_axial_inlet, wall, outlet)
 MARKER_INLET_SPECIES= (gas_inlet, 1.0, \          
                        air_axial_inlet, 0.0)           
 %
