Added config option on controlling variable and their sources names and generalized the flamelet output options accordingly

--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
@@ -38,6 +38,9 @@ INC_NONDIM= DIMENSIONAL
 %
 FLUID_MODEL= FLUID_FLAMELET
 FILENAME_LUT= fgm_ch4.drg
+CONTROLLING_VARIABLE_NAMES= ("ProgressVariable", "EnthalpyTot")
+CONTROLLING_VARIABLE_SOURCE_NAMES= ("ProdRateTot_PV", "NULL")
+
 CONDUCTIVITY_MODEL= FLAMELET
 DIFFUSIVITY_MODEL= FLAMELET
 KIND_SCALAR_MODEL= FLAMELET
