--- a/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd_fluid.cfg
+++ b/TestCases/flamelet/03_laminar_premixed_ch4_flame_cht_cfd/lam_prem_ch4_cht_cfd_fluid.cfg
@@ -53,6 +53,8 @@ INC_NONDIM= DIMENSIONAL
 
 FLUID_MODEL= FLUID_FLAMELET
 FILENAME_LUT= fgm_ch4.drg
+CONTROLLING_VARIABLE_NAMES= ("ProgressVariable", "EnthalpyTot")
+CONTROLLING_VARIABLE_SOURCE_NAMES= ("ProdRateTot_PV", "NULL")
 FLAME_INIT= (0.004, 0.0, 0.0, 1.0, 0.0, 0.0, 0.2e-3, 1.0)
 
 % -------------------- SPECIES TRANSPORT ---------------------------------------%
