--- a/TestCases/flamelet/06_laminar_partial_premixed_ch4_flame_cfd/lam_partial_premixed_ch4_cfd.cfg
+++ b/TestCases/flamelet/06_laminar_partial_premixed_ch4_flame_cfd/lam_partial_premixed_ch4_cfd.cfg
@@ -28,6 +28,8 @@ INC_NONDIM= DIMENSIONAL
 %
 FLUID_MODEL= FLUID_FLAMELET
 FILENAME_LUT= LUT_methane_PD.drg
+CONTROLLING_VARIABLE_NAMES= ("ProgressVariable", "EnthalpyTot","MixtureFraction")
+CONTROLLING_VARIABLE_SOURCE_NAMES= ("ProdRateTot_PV", "NULL", "NULL")
 
 OBJECTIVE_FUNCTION= CUSTOM_OBJFUNC
 OBJECTIVE_WEIGHT= 1.0
