--- a/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
@@ -28,6 +28,8 @@ INC_NONDIM= DIMENSIONAL
 %
 FLUID_MODEL= FLUID_FLAMELET
 FILENAME_LUT= fgm_ch4.drg
+CONTROLLING_VARIABLE_NAMES= ("ProgressVariable", "EnthalpyTot")
+CONTROLLING_VARIABLE_SOURCE_NAMES = ("ProdRateTot_PV", "NULL")
 %
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
 %
