--- a/TestCases/flamelet/05_laminar_premixed_ch4_flame_cfd_axi/lam_prem_ch4_cfd_axi.cfg
+++ b/TestCases/flamelet/05_laminar_premixed_ch4_flame_cfd_axi/lam_prem_ch4_cfd_axi.cfg
@@ -31,6 +31,8 @@ AXISYMMETRIC= YES
 %
 FLUID_MODEL= FLUID_FLAMELET
 FILENAME_LUT= fgm_ch4.drg
+CONTROLLING_VARIABLE_NAMES= ("ProgressVariable", "EnthalpyTot")
+CONTROLLING_VARIABLE_SOURCE_NAMES= ("ProdRateTot_PV", "NULL")
 %
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
 %
