--- a/TestCases/flamelet/06_laminar_partial_premixed_ch4_flame_cfd/lam_partial_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/06_laminar_partial_premixed_ch4_flame_cfd/lam_partial_prem_ch4_cfd.cfg
@@ -17,7 +17,7 @@ RESTART_SOL= NO
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
-INC_DENSITY_MODEL= VARIABLE 
+INC_DENSITY_MODEL= VARIABLE
 INC_ENERGY_EQUATION = YES
 INC_DENSITY_INIT= 1.00
 INC_VELOCITY_INIT= (0.7, 0.0, 0.0 )
@@ -27,12 +27,12 @@ INC_NONDIM= DIMENSIONAL
 % -------------------- FLUID MODEL --------------------------------------- %
 %
 FLUID_MODEL= FLUID_FLAMELET
-FILENAME_LUT= LUT_methane_PD.drg
-CONTROLLING_VARIABLE_NAMES= ("ProgressVariable", "EnthalpyTot","MixtureFraction")
-CONTROLLING_VARIABLE_SOURCE_NAMES= ("ProdRateTot_PV", "NULL", "NULL")
+FILENAME_LUT= LUT_methane_3D.drg
+% FGM controlling variable names (must include mixture fraction for partial 
+% premixed cases)
+CONTROLLING_VARIABLE_NAMES=(ProgressVariable,EnthalpyTot,MixtureFraction)
 
-OBJECTIVE_FUNCTION= CUSTOM_OBJFUNC
-OBJECTIVE_WEIGHT= 1.0
+CONTROLLING_VARIABLE_SOURCE_NAMES=(ProdRateTot_PV,NULL,NULL)
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
 %
 KIND_SCALAR_MODEL= FLAMELET      
@@ -51,10 +51,10 @@ SPECIES_CLIPPING= YES
 SPECIES_CLIPPING_MIN= 0 -2.0e6 0 0 0
 SPECIES_CLIPPING_MAX= 0.3 2e6 1 1 1
 %
-MARKER_INLET_SPECIES = (inlet_upper, 0.0,	-253498.718914723, 0.09, 0.0, 0.0,\
-                        inlet_lower, 0.0,	-253498.718914723, 0.01, 0.0, 0.0) 
+MARKER_INLET_SPECIES = (inlet_rich, 0.0,	-253498.718914723, 0.06, 0.0, 0.0,\
+                        inlet_lean, 0.0,	-253498.718914723, 0.04, 0.0, 0.0) 
 CFL_REDUCTION_SPECIES= 1.0
-MARKER_SPECIES_STRONG_BC= (inlet, outlet,cht_interface_burner_fluid, outlet,cht_interface_hex_fluid)
+MARKER_SPECIES_STRONG_BC= (inlet_rich,inlet_lean, burner_wall,outlet)
 LOOKUP_NAMES = (MolarWeightMix, Conductivity, Cp, ProdRateTot_PV)
 USER_SCALAR_NAMES= (CO, CO2)
 USER_SOURCE_NAMES = ( \
@@ -72,11 +72,12 @@ REF_AREA= 1.0
 %
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
-MARKER_ISOTHERMAL= (cht_interface_burner_fluid, 400, cht_interface_hex_fluid, 400)
+MARKER_ISOTHERMAL= (burner_wall, 400, hex_wall, 400)
+MARKER_HEATFLUX= (mixing_edge, 0.0)
 MARKER_SYM= (sides)
 INC_INLET_TYPE= VELOCITY_INLET,VELOCITY_INLET
-MARKER_INLET = (inlet_upper, 300.000, 0.3, 1.0, 0.0, 0.0,\
-                inlet_lower, 300.000, 0.25, 1.0, 0.0, 0.0)
+MARKER_INLET = (inlet_rich, 300.000, 0.3, 1.0, 0.0, 0.0,\
+                inlet_lean, 300.000, 0.25, 1.0, 0.0, 0.0)
 INC_OUTLET_TYPE= PRESSURE_OUTLET
 INC_INLET_DAMPING = 0.05
 INC_OUTLET_DAMPING = 0.05
@@ -87,7 +88,7 @@ MARKER_OUTLET= (outlet, 0.0)
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 20
 CFL_ADAPT= NO
-ITER= 20000
+ITER= 10000
 OUTPUT_WRT_FREQ= 20
 %
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
@@ -114,7 +115,7 @@ CONV_RESIDUAL_MINVAL= -15
 CONV_STARTITER= 10
 CONV_CAUCHY_ELEMS= 100
 CONV_CAUCHY_EPS= 1E-6
-SCREEN_OUTPUT = INNER_ITER RMS_VELOCITY-X RMS_VELOCITY-Y RMS_PRESSURE RMS_PROGRESS_VARIABLE RMS_TOTAL_ENTHALPY RMS_MIXTURE_FRACTION RMS_CO2
+SCREEN_OUTPUT = INNER_ITER RMS_VELOCITY-X RMS_VELOCITY-Y RMS_PRESSURE RMS_ProgressVariable RMS_EnthalpyTot RMS_MixtureFraction RMS_CO2
 HISTORY_OUTPUT = RMS_RES AERO_COEFF FLOW_COEFF FLOW_COEFF_SURF
 VOLUME_OUTPUT = SOLUTION PRIMITIVE SOURCE RESIDUAL SENSITIVITY LOOKUP TIMESTEP
 CONV_FIELD = RMS_PRESSURE
@@ -123,7 +124,7 @@ CONV_FIELD = RMS_PRESSURE
 %
 OUTPUT_PRECISION= 16
 MESH_FORMAT= SU2
-MESH_FILENAME= fluid.su2
+MESH_FILENAME= mesh_unstructured.su2
 MESH_OUT_FILENAME= mesh_out.su2
 SOLUTION_FILENAME= solution
 RESTART_FILENAME= restart
