--- a/config_template.cfg
+++ b/config_template.cfg
@@ -770,6 +770,16 @@ LOOKUP_NAMES= (MolarWeightMix, Conductivity, HeatRelease, Diffusivity)
 %
 % filename of the lookup table
 FILENAME_LUT= fgm_ch4.drg
+
+% Names of the controlling variables used to evaluate the look-up table and for which
+% transported scalar variables are generated. These names should coincide with those
+% listed in the look-up table.
+CONTROLLING_VARIABLE_NAMES= (ProgressVariable, EnthalpyTot)
+
+% Names of the source term variables as they are present in the look-up table. For
+% controlling variables without source terms, use "zero" or "null", similar to the
+% option USER_SOURCE_NAMES.
+CONTROLLING_VARIABLE_SOURCE_NAMES= (ProdRateTot_PV, NULL)
 %
 % flamelet initialization
 % the flame is initialized using a plane, defined by a point and a normal. On one side, the solution is initialized
