--- a/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
@@ -28,8 +28,8 @@ INC_NONDIM= DIMENSIONAL
 %
 FLUID_MODEL= FLUID_FLAMELET
 FILENAME_LUT= fgm_ch4.drg
-CONTROLLING_VARIABLE_NAMES= ("ProgressVariable", "EnthalpyTot")
-CONTROLLING_VARIABLE_SOURCE_NAMES = ("ProdRateTot_PV", "NULL")
+CONTROLLING_VARIABLE_NAMES= (ProgressVariable, EnthalpyTot)
+CONTROLLING_VARIABLE_SOURCE_NAMES = (ProdRateTot_PV, NULL)
 %
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
 %
@@ -114,7 +114,7 @@ CONV_RESIDUAL_MINVAL= -15
 CONV_STARTITER= 10
 CONV_CAUCHY_ELEMS= 100
 CONV_CAUCHY_EPS= 1E-6
-SCREEN_OUTPUT = INNER_ITER RMS_VELOCITY-X RMS_VELOCITY-Y RMS_PRESSURE RMS_PROGRESS_VARIABLE RMS_TOTAL_ENTHALPY RMS_CO RMS_NOx
+SCREEN_OUTPUT = INNER_ITER RMS_VELOCITY-X RMS_VELOCITY-Y RMS_PRESSURE RMS_ProgressVariable RMS_EnthalpyTot RMS_CO RMS_NOx
 HISTORY_OUTPUT = RMS_RES AERO_COEFF FLOW_COEFF FLOW_COEFF_SURF
 VOLUME_OUTPUT = SOLUTION PRIMITIVE SOURCE RESIDUAL SENSITIVITY LOOKUP TIMESTEP
 CONV_FIELD = RMS_PRESSURE
