--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
@@ -38,8 +38,8 @@ INC_NONDIM= DIMENSIONAL
 %
 FLUID_MODEL= FLUID_FLAMELET
 FILENAME_LUT= fgm_ch4.drg
-CONTROLLING_VARIABLE_NAMES= ("ProgressVariable", "EnthalpyTot")
-CONTROLLING_VARIABLE_SOURCE_NAMES= ("ProdRateTot_PV", "NULL")
+CONTROLLING_VARIABLE_NAMES= (ProgressVariable, EnthalpyTot)
+CONTROLLING_VARIABLE_SOURCE_NAMES= (ProdRateTot_PV, NULL)
 
 CONDUCTIVITY_MODEL= FLAMELET
 DIFFUSIVITY_MODEL= FLAMELET
@@ -55,7 +55,7 @@ MARKER_SYM= ( axis, symmetry_xm, symmetry_xp )
 %
 INC_INLET_TYPE=  VELOCITY_INLET
 MARKER_INLET= (inlet, 300.0, 0.20,    1.0, 0.0, 0.0)
-MARKER_INLET_SPECIES= (inlet, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
+MARKER_INLET_SPECIES= (inlet, 0.0, 0.0, 0.0, 0.0)
 MARKER_SPECIES_STRONG_BC= (inlet, wall_burner, wall_hx)
 
 %
@@ -67,7 +67,7 @@ MARKER_OUTLET= ( outlet, 0.0 )
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 50
 CFL_REDUCTION_SPECIES= 1.0
-ITER= 11
+ITER= 7000
 %
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -99,7 +99,7 @@ SLOPE_LIMITER_SPECIES= NONE
 %
 TIME_DISCRE_SPECIES= EULER_IMPLICIT
 %
-SPECIES_INIT= (0, 0, 0, 0, 0, 0, 0)
+SPECIES_INIT= (0, 0, 0, 0)
 SPECIES_CLIPPING= NO
 LOOKUP_NAMES= (MolarWeightMix, Conductivity, HeatRelease, Diffusivity, \
     ProdRatePos_Y-CO, ProdRateNegScaled_Y-CO ,\
@@ -116,7 +116,7 @@ CONV_STARTITER= 10
 %
 MESH_FILENAME= mesh_unstructured_hx.su2
 %
-SCREEN_OUTPUT= INNER_ITER WALL_TIME RMS_ADJ_PRESSURE RMS_ADJ_VELOCITY-X RMS_ADJ_VELOCITY-Y RMS_ADJ_SPECIES_0 RMS_ADJ_SPECIES_1 RMS_ADJ_SPECIES_2 RMS_ADJ_SPECIES_3
+SCREEN_OUTPUT= INNER_ITER WALL_TIME RMS_ADJ_PRESSURE RMS_ADJ_VELOCITY-X RMS_ADJ_VELOCITY-Y RMS_ADJ_ProgressVariable RMS_ADJ_EnthalpyTot RMS_ADJ_Y-NOx_tot RMS_ADJ_Y-CO
 SCREEN_WRT_FREQ_INNER= 1
 %
 HISTORY_OUTPUT= ITER RMS_RES LINSOL FLOW_COEFF_SURF CUSTOM COMBO
@@ -125,7 +125,7 @@ MARKER_ANALYZE= outlet
 MARKER_ANALYZE_AVERAGE= MASSFLUX
 %
 %OUTPUT_FILES= RESTART, PARAVIEW, PARAVIEW_MULTIBLOCK
-OUTPUT_FILES= RESTART, RESTART_ASCII
+OUTPUT_FILES= RESTART, RESTART_ASCII, PARAVIEW
 VOLUME_OUTPUT= RESIDUAL, PRIMITIVE
 VOLUME_ADJ_FILENAME= ch4_flame_hx_ad
 
