Removed extra zeros from initial species arrays

--- a/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_fluid.cfg
+++ b/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_fluid.cfg
@@ -36,7 +36,7 @@ INLET_MATCHING_TOLERANCE= 1e-5
 INC_INLET_TYPE= VELOCITY_INLET
 
 MARKER_INLET= (inlet, 300.0, 0.4, 1.0, 0.0, 0.0)
-MARKER_INLET_SPECIES= (inlet, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
+MARKER_INLET_SPECIES= (inlet, 0.0, 0.0, 0.0, 0.0)
 
 INC_OUTLET_TYPE= PRESSURE_OUTLET
 MARKER_OUTLET= (outlet, 0.0)
@@ -75,7 +75,7 @@ SLOPE_LIMITER_SPECIES= NONE
 
 TIME_DISCRE_SPECIES= EULER_IMPLICIT
 
-SPECIES_INIT= (0, 0, 0, 0, 0, 0, 0)
+SPECIES_INIT= (0, 0, 0, 0)
 SPECIES_CLIPPING= NO
 LOOKUP_NAMES= (MolarWeightMix, Conductivity, HeatRelease, Diffusivity, \
     ProdRatePos_Y-CO,  ProdRateNegScaled_Y-CO  ,\
