Added partially premixed methane test case files

--- a/TestCases/flamelet/06_laminar_partial_premixed_ch4_flame_cfd/lam_partial_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/06_laminar_partial_premixed_ch4_flame_cfd/lam_partial_prem_ch4_cfd.cfg
@@ -48,13 +48,13 @@ SLOPE_LIMITER_SPECIES= NONE
 TIME_DISCRE_SPECIES= EULER_IMPLICIT
 % SCALAR CLIPPING
 SPECIES_CLIPPING= YES
-SPECIES_CLIPPING_MIN= 0 -2.0e6 0 0 0
+SPECIES_CLIPPING_MIN= 0 -3.0e6 0 0 0
 SPECIES_CLIPPING_MAX= 0.3 2e6 1 1 1
 %
 MARKER_INLET_SPECIES = (inlet_rich, 0.0,	-253498.718914723, 0.06, 0.0, 0.0,\
                         inlet_lean, 0.0,	-253498.718914723, 0.04, 0.0, 0.0) 
 CFL_REDUCTION_SPECIES= 1.0
-MARKER_SPECIES_STRONG_BC= (inlet_rich,inlet_lean, burner_wall,outlet)
+MARKER_SPECIES_STRONG_BC= (inlet_rich,inlet_lean, burner_wall, hex_wall)
 LOOKUP_NAMES = (MolarWeightMix, Conductivity, Cp, ProdRateTot_PV)
 USER_SCALAR_NAMES= (CO, CO2)
 USER_SOURCE_NAMES = ( \
@@ -72,7 +72,7 @@ REF_AREA= 1.0
 %
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
-MARKER_ISOTHERMAL= (burner_wall, 400, hex_wall, 400)
+MARKER_ISOTHERMAL= (burner_wall, 400, hex_wall, 500)
 MARKER_HEATFLUX= (mixing_edge, 0.0)
 MARKER_SYM= (sides)
 INC_INLET_TYPE= VELOCITY_INLET,VELOCITY_INLET
@@ -88,7 +88,7 @@ MARKER_OUTLET= (outlet, 0.0)
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 20
 CFL_ADAPT= NO
-ITER= 10000
+ITER= 10
 OUTPUT_WRT_FREQ= 20
 %
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
