Fixed density model implementation for flamelet fluid model

--- a/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
@@ -17,7 +17,7 @@ RESTART_SOL = YES
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
-INC_DENSITY_MODEL= VARIABLE 
+INC_DENSITY_MODEL= FLAMELET
 INC_ENERGY_EQUATION = YES
 INC_DENSITY_INIT= 1.00
 INC_VELOCITY_INIT= (0.5, 0.0, 0.0 )
