--- a/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_fluid.cfg
+++ b/TestCases/flamelet/04_laminar_premixed_ch4_flame_cht_ad/lam_prem_ch4_cht_ad_fluid.cfg
@@ -44,7 +44,7 @@ MARKER_SPECIES_STRONG_BC= (inlet, wall_burner)
 
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 
-INC_DENSITY_MODEL= VARIABLE
+INC_DENSITY_MODEL= FLAMELET
 INC_DENSITY_INIT= 1.1766
 INC_VELOCITY_INIT= ( 0.2, 0, 0 )
 INC_ENERGY_EQUATION= YES
