--- a/config_template.cfg
+++ b/config_template.cfg
@@ -218,8 +218,9 @@ REF_DIMENSIONALIZATION= DIMENSIONAL
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
 % Density model within the incompressible flow solver.
-% Options are CONSTANT (default), BOUSSINESQ, or VARIABLE. If VARIABLE,
-% an appropriate fluid model must be selected.
+% Options are CONSTANT (default), BOUSSINESQ, VARIABLE, or FLAMELET. If VARIABLE,
+% an appropriate fluid model must be selected. For FLAMELET, the density is
+% retrieved directly from the flamelet manifold.
 INC_DENSITY_MODEL= CONSTANT
 %
 % Solve the energy equation in the incompressible flow solver
