--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_dot.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_dot.cfg
@@ -28,7 +28,7 @@ CUSTOM_OUTPUTS= 'avg_NOx : MassFlowAvg{SPECIES[3]}[outlet]'
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
-INC_DENSITY_MODEL= VARIABLE
+INC_DENSITY_MODEL= FLAMELET
 INC_DENSITY_INIT= 1.1766
 INC_VELOCITY_INIT= ( 0.2, 0, 0 )
 INC_ENERGY_EQUATION= YES
