--- a/TestCases/les_debug/channel/debug_wmles.cfg
+++ b/TestCases/les_debug/channel/debug_wmles.cfg
@@ -1,42 +1,26 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Config for development and debug of LES/WMLES in SU2       %
+% Case description: LES Sim: Plane Channel Flow - Re_tau = 544                 %
 % Author: Paul Urbanczyk                                                       %
 % Institution: Stanford University                                             %
-% Date: April 29, 2022                                                         %
-% File Version 7.3.1 "Blackbird"                                               %
+% Date: November 10, 2022                                                           %
+% File Version 7.4.0 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
 % Solver type (EULER, NAVIER_STOKES, RANS,
-%              INC_EULER, INC_NAVIER_STOKES, INC_RANS,
-%              NEMO_EULER, NEMO_NAVIER_STOKES,
-%              FEM_EULER, FEM_NAVIER_STOKES, FEM_RANS, FEM_LES,
-%              HEAT_EQUATION_FVM, ELASTICITY)
+%                               INC_EULER, INC_NAVIER_STOKES, INC_RANS
+%                               FEM_EULER, FEM_NAVIER_STOKES, FEM_RANS, FEM_LES,
+%                               HEAT_EQUATION_FVM, ELASTICITY)
 SOLVER= NAVIER_STOKES
 %
-% Specify turbulence model (NONE, SA, SA_NEG, SST, SA_E, SA_COMP, SA_E_COMP, SST_SUST)
-KIND_TURB_MODEL= NONE
-%
-% Transition model (NONE, BC)
-KIND_TRANS_MODEL= NONE
-%
 % Specify subgrid scale model(NONE, IMPLICIT_LES, SMAGORINSKY, WALE, VREMAN)
-KIND_SGS_MODEL= NONE
-%
-% Specify the verification solution(NO_VERIFICATION_SOLUTION, INVISCID_VORTEX,
-%                                   RINGLEB, NS_UNIT_QUAD, TAYLOR_GREEN_VORTEX,
-%                                   MMS_NS_UNIT_QUAD, MMS_NS_UNIT_QUAD_WALL_BC,
-%                                   MMS_NS_TWO_HALF_CIRCLES, MMS_NS_TWO_HALF_SPHERES,
-%                                   MMS_INC_EULER, MMS_INC_NS, INC_TAYLOR_GREEN_VORTEX,
-%                                   USER_DEFINED_SOLUTION)
-KIND_VERIFICATION_SOLUTION= NO_VERIFICATION_SOLUTION
+KIND_SGS_MODEL= IMPLICIT_LES
 %
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT, DISCRETE_ADJOINT)
-% Defaults to DISCRETE_ADJOINT for the SU2_*_AD codes, and to DIRECT otherwise.
 MATH_PROBLEM= DIRECT
 %
 % Restart solution (NO, YES)
@@ -44,11 +28,11 @@ RESTART_SOL= YES
 %
 % System of measurements (SI, US)
 % International system of units (SI): ( meters, kilograms, Kelvins,
-%                                       Newtons = kg m/s^2, Pascals = N/m^2,
+%                                       Newtons = kg m/s^2, Pascals = N/m^2, 
 %                                       Density = kg/m^3, Speed = m/s,
 %                                       Equiv. Area = m^2 )
-% United States customary units (US): ( inches, slug, Rankines, lbf = slug ft/s^2,
-%                                       psf = lbf/ft^2, Density = slug/ft^3,
+% United States customary units (US): ( inches, slug, Rankines, lbf = slug ft/s^2, 
+%                                       psf = lbf/ft^2, Density = slug/ft^3, 
 %                                       Speed = ft/s, Equiv. Area = ft^2 )
 SYSTEM_MEASUREMENTS= SI
 %
@@ -56,10 +40,10 @@ SYSTEM_MEASUREMENTS= SI
 % ------------------------------- SOLVER CONTROL ------------------------------%
 %
 % Maximum number of time iterations
-TIME_ITER= 500010
+TIME_ITER= 5
 %
 % Iteration number to begin unsteady restarts
-RESTART_ITER= 500001
+RESTART_ITER= 2
 %
 
 % ------------------------- TIME-DEPENDENT SIMULATION -------------------------------%
@@ -72,7 +56,7 @@ TIME_DOMAIN= YES
 TIME_MARCHING= TIME_STEPPING
 %
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
-UNST_CFL_NUMBER= 1.0
+UNST_CFL_NUMBER= 0.01
 %
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
@@ -89,22 +73,16 @@ INIT_OPTION= REYNOLDS
 FREESTREAM_OPTION= TEMPERATURE_FS
 %
 % Free-stream pressure (101325.0 N/m^2, 2116.216 psf by default)
-FREESTREAM_PRESSURE= 2304.6
+FREESTREAM_PRESSURE= 2.304573e3
 %
 % Free-stream temperature (288.15 K, 518.67 R by default)
 FREESTREAM_TEMPERATURE= 273.15
 %
 % Reynolds number (non-dimensional, based on the free-stream values)
-REYNOLDS_NUMBER= 11350
+REYNOLDS_NUMBER= 1.134963e4
 %
 % Reynolds length (1 m, 1 inch by default)
 REYNOLDS_LENGTH= 0.1
-%
-% Free-stream velocity (1.0 m/s, 1.0 ft/s by default)
-FREESTREAM_VELOCITY= ( 66.2643, 0.00, 0.00 )
-%
-% Free-stream viscosity (1.853E-5 N s/m^2, 3.87E-7 lbf s/ft^2 by default)
-FREESTREAM_VISCOSITY= 1.716e-5
 %
 % Compressible flow non-dimensionalization (DIMENSIONAL, FREESTREAM_PRESS_EQ_ONE,
 %                              FREESTREAM_VEL_EQ_MACH, FREESTREAM_VEL_EQ_ONE)
@@ -121,16 +99,20 @@ REF_ORIGIN_MOMENT_Z = 0.00
 % Reference length for moment non-dimensional coefficients (m or in)
 REF_LENGTH= 0.1
 %
-% Reference area for non-dimensional force coefficients (0 implies automatic
-% calculation) (m^2 or in^2)
-REF_AREA= 0.6144
-%
 
-% ---- NONEQUILIBRIUM GAS, IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
+% ---- IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
 %
 % Fluid model (STANDARD_AIR, IDEAL_GAS, VW_GAS, PR_GAS,
-%              CONSTANT_DENSITY, INC_IDEAL_GAS, INC_IDEAL_GAS_POLY, MUTATIONPP, SU2_NONEQ)
+%              CONSTANT_DENSITY, INC_IDEAL_GAS, INC_IDEAL_GAS_POLY)
 FLUID_MODEL= STANDARD_AIR
+%
+% Ratio of specific heats (1.4 default and the value is hardcoded
+%                          for the model STANDARD_AIR, compressible only)
+GAMMA_VALUE= 1.4
+%
+% Specific gas constant (287.058 J/kg*K default and this value is hardcoded
+%                        for the model STANDARD_AIR, compressible only)
+GAS_CONSTANT= 287.058
 %
 
 % --------------------------- VISCOSITY MODEL ---------------------------------%
@@ -138,15 +120,15 @@ FLUID_MODEL= STANDARD_AIR
 % Viscosity model (SUTHERLAND, CONSTANT_VISCOSITY, POLYNOMIAL_VISCOSITY).
 VISCOSITY_MODEL= SUTHERLAND
 %
+% Molecular Viscosity that would be constant (1.716E-5 by default)
+MU_CONSTANT= 1.716E-5
+%
 
 % --------------------------- THERMAL CONDUCTIVITY MODEL ----------------------%
 %
-% Laminar Conductivity model (CONSTANT_CONDUCTIVITY, CONSTANT_PRANDTL,
+% Laminar Conductivity model (CONSTANT_CONDUCTIVITY, CONSTANT_PRANDTL, 
 % POLYNOMIAL_CONDUCTIVITY).
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
-%
-% Molecular Thermal Conductivity that would be constant (0.0257 by default)
-THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
 %
 % Laminar Prandtl number (0.72 (air), only for CONSTANT_PRANDTL)
 PRANDTL_LAM= 0.72
@@ -165,90 +147,50 @@ PRANDTL_TURB= 0.90
 BODY_FORCE= YES
 %
 % Vector of body force values (BodyForce_X, BodyForce_Y, BodyForce_Z)
-BODY_FORCE_VECTOR= ( 100.8773, 0.0, 0.0 )
-
-% --------------------- STREAMWISE PERIODICITY DEFINITION ---------------------%
-%
-% Generally for streamwise periodictiy one has to set MARKER_PERIODIC= (<inlet>, <outlet>, ...)
-% appropriately as a boundary condition.
-%
-% Specify type of streamwise periodictiy (default=NONE, PRESSURE_DROP, MASSFLOW)
-%KIND_STREAMWISE_PERIODIC= NONE
-%
-% Delta P [Pa] value that drives the flow as a source term in the momentum equations.
-% Defaults to 1.0.
-%STREAMWISE_PERIODIC_PRESSURE_DROP= 1.0
-%
-% Target massflow [kg/s]. Necessary pressure drop is determined iteratively. 
-% Initial value is given via STREAMWISE_PERIODIC_PRESSURE_DROP. Default value 1.0.
-% Use INC_OUTLET_DAMPING as a relaxation factor. Default value 0.1 is a good start.
-%STREAMWISE_PERIODIC_MASSFLOW= 0.0
-%
-% Use streamwise periodic temperature (default=NO, YES)
-% If NO, the heatflux is taken out at the outlet.
-% This option is only necessary if INC_ENERGY_EQUATION=YES
-%STREAMWISE_PERIODIC_TEMPERATURE= NO
-%
-% Prescribe integrated heat [W] extracted at the periodic "outlet".
-% Only active if STREAMWISE_PERIODIC_TEMPERATURE= NO.
-% If set to zero, the heat is integrated automatically over all present MARKER_HEATFLUX.
-% Upon convergence, the area averaged inlet temperature will be INC_TEMPERATURE_INIT.
-% Defaults to 0.0.
-%STREAMWISE_PERIODIC_OUTLET_HEAT= 0.0
-%
+%BODY_FORCE_VECTOR= ( 100.8773, 0.0, 0.0 )
+BODY_FORCE_VECTOR= ( 50.4386, 0.0, 0.0 )
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
-% Euler wall boundary marker(s) (NONE = no marker)
-% Implementation identical to MARKER_SYM.
-MARKER_EULER= ( NONE )
-%
-% Navier-Stokes (no-slip), constant heat flux wall  marker(s) (NONE = no marker)
-% Format: ( marker name, constant heat flux (J/m^2), ... )
-MARKER_HEATFLUX= ( NONE )
-%
-% Navier-Stokes (no-slip), heat-transfer/convection wall marker(s) (NONE = no marker)
-% Available for compressible and incompressible flow.
-% Format: ( marker name, constant heat-transfer coefficient (J/(K*m^2)), constant reservoir Temperature (K) ... )
-MARKER_HEATTRANSFER= ( NONE )
-%
 % Navier-Stokes (no-slip), isothermal wall marker(s) (NONE = no marker)
 % Format: ( marker name, constant wall temperature (K), ... )
-MARKER_ISOTHERMAL= ( y_0, 273.15, y_1, 273.15 )
-%
-% Symmetry boundary marker(s) (NONE = no marker)
-% Implementation identical to MARKER_EULER.
-MARKER_SYM= ( NONE )
-%
-% Internal boundary marker(s) e.g. no boundary condition (NONE = no marker)
-MARKER_INTERNAL= ( NONE )
+%MARKER_ISOTHERMAL= ( y_0, 273.15, y_1, 273.15 )
+MARKER_ISOTHERMAL= ( y_0, 273.15 )
 %
 % Periodic boundary marker(s) (NONE = no marker)
 % Format: ( periodic marker, donor marker, rotation_center_x, rotation_center_y,
 % rotation_center_z, rotation_angle_x-axis, rotation_angle_y-axis,
 % rotation_angle_z-axis, translation_x, translation_y, translation_z, ... )
-MARKER_PERIODIC= ( x_0, x_1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.28, 0.0, 0.0, z_0, z_1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.48 )
+%MARKER_PERIODIC= ( x_0, x_1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.5133, 0.0, 0.0, z_0, z_1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.9425 )
+MARKER_PERIODIC= ( x_0, x_1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.5133, 0.0, 0.0 )
 %
+% Symmetry boundary marker(s) (NONE = no marker)
+% Implementation identical to MARKER_EULER.
+MARKER_SYM= ( y_1, z_0, z_1 )
+%
+% Marker(s) where wall functions are applied
+MARKER_WALL_FUNCTIONS= ( y_0, LOGARITHMIC_WALL_MODEL, 0.1, 1.1, 60 )
+
+
 
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
 % Marker(s) of the surface in the surface flow solution file
-MARKER_PLOTTING = ( y_0, y_1 )
-%
+MARKER_PLOTTING= ( y_0 )
+% 
 % Marker(s) of the surface where the non-dimensional coefficients are evaluated.
-MARKER_MONITORING = ( y_0, y_1 )
+MARKER_MONITORING= ( y_0 )
 %
-% Marker(s) of the surface that is going to be analyzed in detail (massflow, average pressure, distortion, etc)
-MARKER_ANALYZE = ( x_0, x_1 )
-%
-% Method to compute the average value in MARKER_ANALYZE (AREA, MASSFLUX).
-MARKER_ANALYZE_AVERAGE = AREA
-%
+MARKER_ANALYZE= ( x_0 )
+
 
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 % Numerical method for spatial gradients (GREEN_GAUSS, WEIGHTED_LEAST_SQUARES)
 NUM_METHOD_GRAD= GREEN_GAUSS
+%
+% Adaptive CFL number (NO, YES)
+CFL_ADAPT= NO
 %
 % Runge-Kutta alpha coefficients
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
@@ -258,32 +200,22 @@ RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 %
 % Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
 %           Required for 2nd order upwind schemes (NO, YES)
-MUSCL_FLOW= YES
+MUSCL_FLOW= NO
 %
 % Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG,
 %                BARTH_JESPERSEN, VAN_ALBADA_EDGE)
 SLOPE_LIMITER_FLOW= VENKATAKRISHNAN
 %
-% Coefficient for the Venkat limiter (upwind scheme). A larger values decrease
-%             the extent of limiting, values approaching zero cause
-%             lower-order approximation to the solution (0.05 by default)
-VENKAT_LIMITER_COEFF= 0.05
+
+% -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
+%
+% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, AUSMPLUSUP,
+%                              AUSMPLUSUP2, HLLC, TURKEL_PREC, MSW, FDS, SLAU, SLAU2)
+CONV_NUM_METHOD_FLOW= JST
 %
 % 2nd and 4th order artificial dissipation coefficients for
 %     the JST method ( 0.5, 0.02 by default )
 JST_SENSOR_COEFF= ( 0.5, 0.0 )
-%
-
-% -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
-%
-% Convective numerical method (JST, JST_KE, JST_MAT, LAX-FRIEDRICH, CUSP, ROE, AUSM,
-%                              AUSMPLUSUP, AUSMPLUSUP2, AUSMPWPLUS, HLLC, TURKEL_PREC,
-%                              SW, MSW, FDS, SLAU, SLAU2, L2ROE, LMROE)
-CONV_NUM_METHOD_FLOW= JST
-%
-% Use the vectorized version of the selected numerical method (available for JST family and Roe).
-% SU2 should be compiled for an AVX or AVX512 architecture for best performance.
-USE_VECTORIZATION= NO
 %
 % Entropy fix coefficient (0.0 implies no entropy fixing, 1.0 implies scalar
 %                          artificial dissipation)
@@ -296,40 +228,35 @@ TIME_DISCRE_FLOW= RUNGE-KUTTA_EXPLICIT
 % ------------------------- SCREEN/HISTORY VOLUME OUTPUT --------------------------%
 %
 % Screen output fields (use 'SU2_CFD -d <config_file>' to view list of available fields)
-SCREEN_OUTPUT= (TIME_ITER, WALL_TIME, TIME_STEP, CUR_TIME, RMS_DENSITY, RMS_MOMENTUM-X, RMS_MOMENTUM-Y, RMS_ENERGY, SURFACE_MASSFLOW, SURFACE_MACH, DRAG, LIFT, TOTAL_HEATFLUX)
+SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, WALL_TIME, CUR_TIME, TIME_STEP, RMS_DENSITY, RMS_MOMENTUM-X, RMS_MOMENTUM-Y, SURFACE_MASSFLOW )
 %
 % History output groups (use 'SU2_CFD -d <config_file>' to view list of available fields)
-HISTORY_OUTPUT= (TIME_ITER, WALL_TIME, TIME_STEP, CUR_TIME, RMS_DENSITY, RMS_MOMENTUM-X, RMS_MOMENTUM-Y, RMS_ENERGY, SURFACE_MASSFLOW, SURFACE_MACH, DRAG, LIFT, TOTAL_HEATFLUX)
+HISTORY_OUTPUT= (TIME_ITER, INNER_ITER, WALL_TIME, CUR_TIME, TIME_STEP, LINSOL_ITER, LINSOL_RESIDUAL, RMS_DENSITY, RMS_MOMENTUM-X, RMS_MOMENTUM-Y, RMS_MOMENTUM-Z, RMS_ENERGY, SURFACE_MASSFLOW, SURFACE_MACH, DRAG, LIFT, TOTAL_HEATFLUX)
 %
 % Volume output fields/groups (use 'SU2_CFD -d <config_file>' to view list of available fields)
-VOLUME_OUTPUT= (COORDINATES, SOLUTION, PRIMITIVE, VORTEX_IDENTIFICATION, MPI, TIME_AVERAGE)
+VOLUME_OUTPUT= (COORDINATES, SOLUTION, PRIMITIVE, VORTEX_IDENTIFICATION, MPI, TIME_AVERAGE, WALL_DISTANCE)
 %
 % Writing frequency for screen output
 SCREEN_WRT_FREQ_TIME= 1
 %
+SCREEN_WRT_FREQ_INNER= 1
+%
 % Writing frequency for history output
 HISTORY_WRT_FREQ_TIME= 1
 %
-% list of writing frequencies corresponding to the list in OUTPUT_FILES 
-OUTPUT_WRT_FREQ= 10, 5, 5
+HISTORY_WRT_FREQ_INNER= 1
+%
+% list of writing frequencies corresponding to the list in OUTPUT_FILES
+OUTPUT_WRT_FREQ= 1
 %
 % Output the performance summary to the console at the end of SU2_CFD
-WRT_PERFORMANCE= NO
-%
-% Overwrite or append iteration number to the restart files when saving 
-WRT_RESTART_OVERWRITE= YES
-%
-% Overwrite or append iteration number to the surface files when saving 
-WRT_SURFACE_OVERWRITE= YES
-%
-% Overwrite or append iteration number to the volume files when saving 
-WRT_VOLUME_OVERWRITE= YES
+WRT_PERFORMANCE= YES
 %
 
 % ------------------------- INPUT/OUTPUT FILE INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= 544_wmles_delta_0.1_coarse_small.su2
+MESH_FILENAME= debug_mesh_half.su2
 %
 % Mesh input file format (SU2, CGNS)
 MESH_FORMAT= SU2
@@ -340,12 +267,12 @@ SOLUTION_FILENAME= restart_flow.dat
 % Output tabular file format (TECPLOT, CSV)
 TABULAR_FORMAT= CSV
 %
-% Files to output
-% Possible formats : (TECPLOT_ASCII, TECPLOT, SURFACE_TECPLOT_ASCII,
-%  SURFACE_TECPLOT, CSV, SURFACE_CSV, PARAVIEW_ASCII, PARAVIEW_LEGACY, SURFACE_PARAVIEW_ASCII,
-%  SURFACE_PARAVIEW_LEGACY, PARAVIEW, SURFACE_PARAVIEW, RESTART_ASCII, RESTART, CGNS, SURFACE_CGNS, STL_ASCII, STL_BINARY)
+% Files to output 
+% Possible formats : (TECPLOT, TECPLOT_BINARY, SURFACE_TECPLOT,
+%  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW, 
+%  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL)
 % default : (RESTART, PARAVIEW, SURFACE_PARAVIEW)
-OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
+OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW )
 %
 % Output file convergence history (w/o extension)
 CONV_FILENAME= history
@@ -367,4 +294,4 @@ READ_BINARY_RESTART= YES
 %
 % Reorient elements based on potential negative volumes (YES/NO)
 REORIENT_ELEMENTS= YES
-%
+
