Implemented ideal gas approximation for data-driven fluid model, such that initial values for density and energy no longer need to be provided by the user

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -373,7 +373,7 @@ FROZEN_MIXTURE= NO
 % Datadriven fluid model
 % For data-driven fluid models, an interpolation algorithm is used to retrieve the thermodynamic state for a given density and internal energy
 
-% Interpolation method for thermodynamic state calculation (only MLP is supported for now)
+% Interpolation method for thermodynamic state calculation (MLP for multi-layer perceptron, LUT for 2D, unstructured look-up table)
 INTERPOLATION_METHOD= MLP
 
 % Name of the input file containing the information required for the interpolator to function
@@ -381,14 +381,7 @@ INTERPOLATION_METHOD= MLP
 FILENAME_INTERPOLATOR= MLP_collection.mlp
 
 % Relaxation factor for the Newton solvers in the data-driven fluid model
-DATADRIVEN_NEWTON_RELAXATION= 0.05
-
-% Initial value for the density used by the Newton solvers in the data-driven fluid model
-DATADRIVEN_FLUID_INITIAL_DENSITY= 1.225
-
-% Initial value for the static energy used by the Newton solvers in the data-driven fluid model
-DATADRIVEN_FLUID_INITIAL_ENERGY= 1e5
-
+DATADRIVEN_NEWTON_RELAXATION= 0.8
 
 %
 % NEMO Inlet Options
