Updated data-driven fluid regression test

--- a/TestCases/nicf/datadriven/datadriven_nozzle.cfg
+++ b/TestCases/nicf/datadriven/datadriven_nozzle.cfg
@@ -15,7 +15,7 @@
 SOLVER= RANS
 KIND_TURB_MODEL= SST
 MATH_PROBLEM= DIRECT
-RESTART_SOL= YES
+RESTART_SOL= NO
 SYSTEM_MEASUREMENTS= SI
 %
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
