No tsan builds on ARM64 for now.

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -74,6 +74,7 @@ jobs:
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
   build_tsan:
     name: Build SU2 (tsan)
+    if: inputs.runner != 'ARM64'
     strategy:
       fail-fast: false
       matrix:
