Pulled develop and implemented changes according to the introduction of CDataDrivenFluid

--- a/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
+++ b/TestCases/flamelet/02_laminar_premixed_ch4_flame_hx_ad/lam_prem_ch4_hx_ad.cfg
@@ -37,7 +37,7 @@ INC_NONDIM= DIMENSIONAL
 % -------------------- FLUID PROPERTIES ------------------------------------- %
 %
 FLUID_MODEL= FLUID_FLAMELET
-FILENAME_LUT= fgm_ch4.drg
+FILENAMES_INTERPOLATOR= (fgm_ch4.drg)
 CONTROLLING_VARIABLE_NAMES= (ProgressVariable, EnthalpyTot)
 CONTROLLING_VARIABLE_SOURCE_NAMES= (ProdRateTot_PV, NULL)
 
