--- a/TestCases/flamelet/06_laminar_partial_premixed_ch4_flame_cfd/lam_partial_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/06_laminar_partial_premixed_ch4_flame_cfd/lam_partial_prem_ch4_cfd.cfg
@@ -27,7 +27,7 @@ INC_NONDIM= DIMENSIONAL
 % -------------------- FLUID MODEL --------------------------------------- %
 %
 FLUID_MODEL= FLUID_FLAMELET
-FILENAME_LUT= LUT_methane_3D.drg
+FILENAMES_INTERPOLATOR= (LUT_methane_3D.drg)
 % FGM controlling variable names (must include mixture fraction for partial 
 % premixed cases)
 CONTROLLING_VARIABLE_NAMES=(ProgressVariable,EnthalpyTot,MixtureFraction)
