--- a/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
@@ -27,7 +27,7 @@ INC_NONDIM= DIMENSIONAL
 % -------------------- FLUID MODEL --------------------------------------- %
 %
 FLUID_MODEL= FLUID_FLAMELET
-FILENAME_LUT= fgm_ch4.drg
+FILENAMES_INTERPOLATOR= (fgm_ch4.drg)
 CONTROLLING_VARIABLE_NAMES= (ProgressVariable, EnthalpyTot)
 CONTROLLING_VARIABLE_SOURCE_NAMES = (ProdRateTot_PV, NULL)
 %
