--- a/TestCases/flamelet/05_laminar_premixed_ch4_flame_cfd_axi/lam_prem_ch4_cfd_axi.cfg
+++ b/TestCases/flamelet/05_laminar_premixed_ch4_flame_cfd_axi/lam_prem_ch4_cfd_axi.cfg
@@ -30,7 +30,7 @@ AXISYMMETRIC= YES
 % -------------------- FLUID MODEL --------------------------------------- %
 %
 FLUID_MODEL= FLUID_FLAMELET
-FILENAME_LUT= fgm_ch4.drg
+FILENAMES_INTERPOLATOR= (fgm_ch4.drg)
 CONTROLLING_VARIABLE_NAMES= (ProgressVariable, EnthalpyTot)
 CONTROLLING_VARIABLE_SOURCE_NAMES= (ProdRateTot_PV, NULL)
 %
