--- a/config_template.cfg
+++ b/config_template.cfg
@@ -374,12 +374,15 @@ FROZEN_MIXTURE= NO
 % Datadriven fluid model
 % For data-driven fluid models, an interpolation algorithm is used to retrieve the thermodynamic state for a given density and internal energy
 
-% Interpolation method for thermodynamic state calculation (MLP for multi-layer perceptron, LUT for 2D, unstructured look-up table)
+% Interpolation method for thermodynamic state calculation for data-driven fluid model or flamelet fluid model.
+% (MLP for multi-layer perceptron, LUT for 2D or 3D, unstructured look-up table)
 INTERPOLATION_METHOD= MLP
 
-% Name of the input file containing the information required for the interpolator to function
-% See https://github.com/EvertBunschoten/MLPCpp for more information.
-FILENAME_INTERPOLATOR= MLP_collection.mlp
+% Name of the input file containing the information required for the interpolator to function.
+% Provide list of .mlp files (See https://github.com/EvertBunschoten/MLPCpp for more information.)
+% when using the MLP option for INTERPOLATION_METHOD
+% or a single .drg file for the LUT INTERPOLATION_METHOD option.
+FILENAMES_INTERPOLATOR= (MLP_1.mlp, MLP_2.mlp, MLP_3.mlp)
 
 % Relaxation factor for the Newton solvers in the data-driven fluid model
 DATADRIVEN_NEWTON_RELAXATION= 0.8
@@ -784,8 +787,6 @@ USER_SOURCE_NAMES= ( ProdRateTot_Y-CO,  zero)
 % Names of variables from the LUT that will be looked up for visualization
 LOOKUP_NAMES= (MolarWeightMix, Conductivity, HeatRelease, Diffusivity)
 %
-% filename of the lookup table
-FILENAME_LUT= fgm_ch4.drg
 
 % Names of the controlling variables used to evaluate the look-up table and for which
 % transported scalar variables are generated. These names should coincide with those
